--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -25,9 +25,18 @@
 {% block page_name %}landing{% endblock %}
 {% block body_class %}landing{% endblock %}
 {% block content %}
-    <div class="landing-content-div short-inner-content container-fluid">
-
-        {% include 'share/site_footer.html'  %}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                THINGS
+            </div>
+            <div class="col">
+                MORE THINGS!
+            </div>
+            <div class="col">
+                Other things.
+            </div>
+        </div>
     </div>
 {% endblock %}
 
