--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,3 +6,14 @@
  *******************************************/
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,700&subset=latin,latin-ext");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,700&subset=latin,latin-ext");
+
+.crdc-nav {
+    text-align: center;
+    background-color: rgb(241, 241, 241);
+    color: #333333;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding: 5px 0px 5px 0px;
+    border-bottom: 2px solid #737373;
+    font-size: 12px;
+}
