--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}IDC{% endblock %}</title>
-    <meta name="description" content="{% block description %}NCI Imaging Data Commons{% endblock %}">
+    <title>{% block title %}Chernobyl Tissue Biobank{% endblock %}</title>
+    <meta name="description" content="{% block description %}Chernobyl Tissue Biobank{% endblock %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {% block extra_css_libs %}{% endblock %}
@@ -64,7 +64,7 @@
     <div class="container-fluid">
         <!-- Site Messages -->
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12" style="z-index: 100;">
+            <div class="col" style="z-index: 100;">
                 {% if messages %}
                     {% autoescape off %}
                         {% for message in messages %}
@@ -85,10 +85,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
-    <!-- The landing page and collections page have a special layout, so they have their own footer include -->
-    {% if request.path != '/' and request.path != '/cohorts/' %}
-        {% include 'share/site_footer.html'  %}
-    {% endif %}
+    {% include 'share/site_footer.html'  %}
 </main>
 
 <!-- Warning Modal -->
