--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -1,22 +1,19 @@
 {% load static %}
-{% load cohort_filters %}
 {% load custom_tags %}
-{% load socialaccount %}
-{% load idc_collections_custom_tags %}
 
-<header class="navbar navbar-fixed-top site-header" role="menubar">
+<header class="navbar navbar-expand-lg site-header" role="menubar">
 
     {% is_allowed user as has_access %}
-    <nav class="container-fluid navbar-container">
+    <nav class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="col">
                 <div class="crdc-nav">
                 <a target="_blank" rel="noopener noreferrer" href="https://datacommons.cancer.gov/">NCI Cancer Research Data Commons</a>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                             data-target="#main-navbar-collapse" aria-expanded="false">
@@ -26,42 +23,32 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="{% url 'landing_page' %}" title="Home Page" >
-                        <img class="navbar-brand" src="{% static 'img/NIH_IDC_title.svg' %}" alt="NIH IDC Logo"/>
+                        <img class="navbar-brand" src="" alt="NIH CTB Logo"/>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li class="navbar-link navbar-item {% if 'collections' in request.path %}active-page{% endif %}">
-                        <a class="main-links" href="{% url 'collections' %}" title="View IDC collections"><i class="fa-solid fa-table-list"></i> Collections</a>
+                        <a class="main-links" href="" title="A link"><i class="fa-solid fa-table-list"></i> An Internal Link</a>
                     </li>
-                    <li class="navbar-link navbar-item {% if 'explore' in request.path %}active-page{% endif %}">
-                        <a class="main-links" href="{% url 'explore_data' %}" title="Explore image data"><i class="fa-solid fa-eye"></i> Exploration</a>
-                    </li>
-                    <li class="navbar-link navbar-item">
-                        <a class="external-link" href="" url="https://discourse.canceridc.dev"
-                           data-toggle="modal" data-target="#external-web-warning">
-                           &nbsp <i class="fa-regular fa-comments"></i> <p class="navbar-label">Discourse</p>
-                            <i class="fa-solid fa-external-link external-link-icon" aria-hidden="true"></i>
-                        </a>
+                    <li class="navbar-link navbar-item {% if 'search' in request.path %}active-page{% endif %}">
+                        <a class="main-links" href="" title="Search"><i class="fa-solid fa-eye"></i> Search</a>
                     </li>
                     <li class="navbar-link navbar-item">
                         <a class="external-link" href="" url="https://learn.canceridc.dev"
                             data-toggle="modal" data-target="#external-web-warning">
-                           &nbsp <i class="fa-solid fa-book"></i> <p class="navbar-label">Documentation</p>
+                           &nbsp; <i class="fa-solid fa-book"></i> <p class="navbar-label">Documentation</p>
                             <i class="fa-solid fa-external-link external-link-icon" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li class="navbar-link navbar-item">
-                        <a class="main-links" href="{% url 'news' %}" title="View news items"><i class="fa-solid fa-bullhorn"></i> News</a>
-                    </li>
-                    <li class="navbar-link navbar-item">
                         <a class="main-links" href="{% url 'about_page' %}" title="Information about IDC"><i class="fa-solid fa-info-circle"></i> About</a>
                     </li>
-                    {% if user.is_authenticated %}
-                    <li class="navbar-link navbar-item">
-                        <a href="{% url 'cohort_list' %}" title="View Your Cohorts"><i class="fa-solid fa-archive"></i> Cohorts</a>
-                    </li>
-                    {% endif %}
+<!--                    {% if user.is_authenticated %}-->
+<!--                    <li class="navbar-link navbar-item">-->
+<!--                        <a href="{% url 'cohort_list' %}" title="View Your Cohorts"><i class="fa-solid fa-archive"></i> Cohorts</a>-->
+<!--                    </li>-->
+<!--                    {% endif %}-->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                 {% if user.is_authenticated %}
