--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -16,7 +16,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <li class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"
@@ -34,37 +34,32 @@
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                 <li id="user-login" class="nav-item navbar-signin">
-                    WOOOOOO
-                    <!--
-                        <a class="avatar-link" href="{% url 'user_detail' user.id %}">
-                            {% with avatar_url=user.socialaccount_set.all.0.get_avatar_url %}
-                                {% if avatar_url %}
-                                    <img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" width="40" height="40" alt="Avatar Link to User Details">
-                                {% else %}
-                                    <i class="fa-solid fa-user basic-avatar"> </i>
-                                {% endif %}
-                            {% endwith %}
+                    <a class="avatar-link" href="{% url 'user_detail' user.id %}">
+                        {% with avatar_url=user.socialaccount_set.all.0.get_avatar_url %}
+                            {% if avatar_url %}
+                                <img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" width="40" height="40" alt="Avatar Link to User Details">
+                            {% else %}
+                                <i class="fa-solid fa-user basic-avatar"> </i>
+                            {% endif %}
+                        {% endwith %}
+                    </a>
+                    <div class="dropdown">
+                        <a role="button" class="dropdown-toggle navbar-item__text" id="user-dropdown" data-toggle="dropdown" aria-label="User Dropdown" aria-expanded="true">
+                            {{ user.first_name }} <i class="fa fa-solid fa-caret-down"></i>
                         </a>
-                        <div class="dropdown">
-                            <a role="button" class="dropdown-toggle navbar-item__text" id="user-dropdown" data-toggle="dropdown" aria-label="User Dropdown" aria-expanded="true">
-                                {{ user.first_name }} <i class="fa fa-solid fa-caret-down"></i>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-label="user-dropdown">
-                                {% if has_access %}<li role="menuitem"><a href="{% url 'user_detail' user.id %}">Account Details <i class="fa-solid fa-cog"></i></a></li>{% endif %}
-                                <li role="menuitem"><a href="#logout-modal" data-toggle="modal" data-target="#logout-modal" title="Sign Out">Sign Out <i class="fa-solid fa-sign-out"></i></a></li>
-                            </ul>
-                        </div>
--->
+                        <ul class="dropdown-menu dropdown-menu-end" role="menu" aria-label="user-dropdown">
+                            {% if has_access %}<li class="dropdown-item"><a href="{% url 'user_detail' user.id %}">Account Details <i class="fa-solid fa-cog"></i></a></li>{% endif %}
+                            <li class="dropdown-item"><a href="#logout-modal" data-bs-toggle="modal" data-bs-target="#logout-modal" title="Sign Out">Sign Out <i class="fa-solid fa-sign-out"></i></a></li>
+                        </ul>
+                    </div>
                 </li>
             {% else %}
-                <li class="nav-item navbar-signin">
-                    WAAAAAAAH
-                    <!--
-                        <div class="dropdown">
-                            <a id="sign-in-dropdown" class="sign-in-dropdown dropdown-toggle navbar-item__text"
-                               href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-solid fa-sign-in"></i><p class="navbar-label">Sign In</p></a>
-                        </div>
--->
+                <li class="nav-item navbar-signin dropdown">
+                    <li class="dropdown-item">
+                        <a id="sign-in-dropdown"
+                           href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-solid fa-sign-in"></i>
+                            Sign In</a>
+                    </li>
                 </li>
             {% endif %}
             </ul>
