--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -6,7 +6,7 @@
 <div class="jumbotron crdc-nav">
     <a target="_blank" rel="noopener noreferrer" href="https://datacommons.cancer.gov/">NCI Cancer Research Data Commons</a>
 </div>
-<nav class="navbar navbar-expand-md fixed-top top-30-px">
+<nav class="navbar navbar-expand-md fixed-top top-30-px navbar-ctb">
     <div class="container-fluid">
         <a href="{% url 'landing_page' %}" title="Home Page" >
             <img class="navbar-brand" src="{% static 'img/NIH_CTB_title.png' %}" alt="NIH CTB Logo"/>
@@ -16,7 +16,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <li class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"
@@ -26,7 +26,7 @@
                 <li class="nav-item">
                     <a class="nav-link external-link" href="" url="https://learn.canceridc.dev"
                        data-bs-toggle="modal" data-bs-target="#external-web-warning">
-                        &nbsp; <i class="fa-solid fa-book"></i> Documentation
+                        <i class="fa-solid fa-book"></i> Documentation
                         <i class="fa-solid fa-external-link external-link-icon" aria-hidden="true"></i>
                     </a>
                 </li>
@@ -55,11 +55,9 @@
                 </li>
             {% else %}
                 <li class="nav-item navbar-signin dropdown">
-                    <li class="dropdown-item">
-                        <a id="sign-in-dropdown"
-                           href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-solid fa-sign-in"></i>
-                            Sign In</a>
-                    </li>
+                    <a id="sign-in-dropdown"
+                       href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-solid fa-sign-in"></i>
+                        Sign In</a>
                 </li>
             {% endif %}
             </ul>
