--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -14,26 +14,22 @@
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
-            <div class="col-lg-4 accounts-col">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 accounts-col">
             <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h4>Password Reset</h4></div>
-                    <div class="panel-body"><p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p></div>
-                    <div class="panel-body">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Password Reset</h4>
+                        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button class="btn btn-default" type="submit">{% trans "Reset My Password" %}</button>
                     </div>
-                    <div class="panel-footer">
-                        <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+                    <div class="card-footer">
+                        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
                     </div>
                 </div>
             </form>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
         </div>
     </div>
 
