--- a/templates/accounts/account/password_reset_done.html
+++ b/templates/accounts/account/password_reset_done.html
@@ -6,21 +6,17 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
-            <div class="col-lg-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading"><h3>{% trans "Password Reset" %}</h3></div>
-                    <div class="panel-body">
-                        {% if user.is_authenticated %}
-                        {% include "account/snippets/already_logged_in.html" %}
-                        {% endif %}
-                        <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-                    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="panel-body">
+                    <h3 class="card-title">{% trans "Password Reset" %}</h3>
+                    {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                    {% endif %}
+                    <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
         </div>
     </div>
 {% endblock %}
