--- a/templates/accounts/account/password_reset_from_key.html
+++ b/templates/accounts/account/password_reset_from_key.html
@@ -4,33 +4,27 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
-            <div class="col-lg-4 accounts-col">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h3>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h3>
-                    </div>
-                    <div class="panel-body">
-                        {% if token_fail %}
-                            {% url 'account_reset_password' as passwd_reset_url %}
-                            <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+    <div class="row justify-content-center">
+        <div class="col-lg-4 accounts-col">
+            <div class="card">
+                <div class="card-body">
+                    <h3 class="card-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h3>
+                    {% if token_fail %}
+                        {% url 'account_reset_password' as passwd_reset_url %}
+                        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
+                    {% else %}
+                        {% if form %}
+                            <form method="POST" action="{{ action_url }}" class="password_reset">
+                                {% csrf_token %}
+                                {{ form.as_p }}
+                                <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
+                            </form>
                         {% else %}
-                            {% if form %}
-                                <form method="POST" action="{{ action_url }}" class="password_reset">
-                                    {% csrf_token %}
-                                    {{ form.as_p }}
-                                    <button class="btn btn-primary" type="submit" name="action">{% trans "Change Password" %}</button>
-                                </form>
-                            {% else %}
-                                <p>{% trans 'Your password is now changed.' %}</p>
-                            {% endif %}
+                            <p>{% trans 'Your password is now changed.' %}</p>
                         {% endif %}
-                    </div>
+                    {% endif %}
                 </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-1"></div>
         </div>
     </div>
 {% endblock %}
