--- a/templates/accounts/account/signup.html
+++ b/templates/accounts/account/signup.html
@@ -11,28 +11,22 @@
 
 {% block content %}
 
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8 accounts-col">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 accounts-col">
             <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            <div class="panel panel-default">
-                <div class="panel-heading"><h3>Sign Up</h3></div>
-                <div class="panel-body">
-                    <p>{% blocktrans %}Already have an account? Please <a href="{{ login_url }}"><b>sign in</b></a> instead.{% endblocktrans %}</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h3 class="card-title">Sign Up</h3>
+                        <p>{% blocktrans %}Already have an account? Please <a href="{{ login_url }}"><b>sign in</b></a> instead.{% endblocktrans %}</p>
+                          {% csrf_token %}
+                          {{ form.as_p }}
+                          {% if redirect_field_value %}
+                          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                          {% endif %}
+                          <button class="btn btn-special" type="submit">{% trans "Sign Up" %} &raquo;</button>
+                    </div>
                 </div>
-                <div class="panel-body">
-                      {% csrf_token %}
-                      {{ form.as_p }}
-                      {% if redirect_field_value %}
-                      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                      {% endif %}
-                      <button class="btn btn-special" type="submit">{% trans "Sign Up" %} &raquo;</button>
-                </div>
-            </div>
             </form>
-            </div>
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
         </div>
     </div>
 
