--- a/templates/403.html
+++ b/templates/403.html
@@ -23,19 +23,15 @@
 {% block title %}Forbidden{% endblock %}
 
 {% block content %}
-    <div class="col-lg-12 short-inner-content-no-header">
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8 accounts-col">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h1>{% trans "Access Forbidden" %}</h1>
-                    </div>
-                    <div class="panel-body">
-                        <h4>403: You do not have permission to access this page.</h4>
-                    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-4 accounts-col">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">{% trans "Access Forbidden" %}</h1>
+                    <h4>403: You do not have permission to access this page.</h4>
                 </div>
             </div>
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
+        </div>
     </div>
 {% endblock %}
 
