--- a/templates/500.html
+++ b/templates/500.html
@@ -23,21 +23,18 @@
 {% block title %}Server error{% endblock %}
 
 {% block content %}
-    <div class="col-lg-12 short-inner-content-no-header">
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8 accounts-col">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h1>{% trans "Internal Server Error" %}</h1>
-                </div>
-                <div class="panel-body">
+    <div class="row justify-content-center">
+        <div class="col-lg-4 accounts-col">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="card-title">{% trans "Internal Server Error" %}</h1>
                     <h4>500: There was an error while handling your request.</h4>
                     <p>We apologize for the inconvenience. Please <a href="mailto:help@canceridc.dev">contact us</a> and let us know what happened.</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-2"></div>
     </div>
+    
 {% endblock %}
 
 {% block js_file %}
