--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -21,21 +21,21 @@
         </button>
         <div class="navbar-collapse collapse" id="navbarCollapse">
             <ul class="navbar-nav justify-content-evenly">
-                <li class="nav-item">
+                <li class="nav-item mx-xl-1 mx-xxl-2">
                     <a class="nav-link" href="https://www.chernobyltissuebank.com/bibliography.htm" target="_blank" rel="noopener"
                        title="See CTB Publications">CTB Publications</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-xl-1 mx-xxl-3">
                     <a class="nav-link" href="https://www.chernobyltissuebank.com" target="_blank" rel="noopener"
                        title="Back to Chernobyl Tissue Bank Website">Back to Main Website</a>
                 </li>
                 {% if request.user.is_authenticated %}
-                <li class="nav-item">
+                <li class="nav-item mx-xl-1 mx-xxl-3">
                     <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"
                        title="Search the Biobank">Dashboard</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item mx-xl-1 mx-xxl-3">
                     <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"
                        title="Search the Biobank">My Saved Searches</a>
                 </li>
